Update: spacing corrections

--- a/module2solutions/css/style.css
+++ b/module2solutions/css/style.css
@@ -1,3 +1,5 @@
+/*Corrected: 2016-04-12*/
+
 /******** Styles *********/
 * {
   box-sizing: border-box;
@@ -11,55 +13,50 @@ h1 {
   text-align: center;
 }
 
+section {
+  background-color: #D8F781;
+  border: 2px solid black;
+  margin: 10px;  
+}
+
 h4 {
   margin: 0px;
-}
-
-div {
-  position: relative;
-}
-
-.title {
+  float: right;
   font-size: 125%;
-  position: absolute;
   color: black;
-  border: 1px solid black;
-  width: 140px;
-  height: 40px;
+  border: 2px solid black;
+  border-top: 0px;
+  border-right: 0px;
   text-align: center;
-  padding-top: 5px;
+  padding: 7px; 
 }
 
-#title1 { 
-  right: 2.5%;
+#title1 {  
   background-color: #00FF40;
 }
 
 #title2 {  
-  right: 2.5%;
   background-color: #088A68;
   color: white;  
 }
 
-#title3 {
-  right: 2.5%;
+#title3 {  
   background-color: #01DFA5;  
 }
 
 .content {
+  clear: right;
   font-size: 85%;
-  width: 95%;
-  text-align: justify;
-  border: 1px solid black;
-  background-color: #D8F781;
-  padding-top: 55px;
-  padding-right: 12px;
-  padding-left: 12px;
-  padding-bottom: 20px;  
-  margin-right: auto;
-  margin-left: auto;
+  text-align: justify;    
+  padding: 20px;
+  padding-top: 20px;  
   color: solid black;
 }
+
+.row {
+  width: 100%;
+}
+
 
 /********** Responsive Design *****/
 
@@ -68,17 +65,24 @@ div {
   .col-lg-4 {
     float: left;
     width: 33.33%;
-  }    
-}
+    }
+  }
 
 /********** Tablet & Mobile View **********/
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6 {
     float: left;    
     width: 50%;
-    }
+  }
+  .col-md-12 {
+    float: left;
+    width: 100%;
+  }
+}
+
+  @media (max-width: 767px) {
   .col-sm-12 {
     float: left;
     width: 100%;
-    }  
   }
+}
